--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,5 +3,5 @@
   <button id="createReport" class="btn btn-primary">
     CREATE A NUISANCE REPORT
   </button>
+  <app-crime-list></app-crime-list>
 </section>
-<app-crime></app-crime>
