--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,4 @@
 <h1>{{ title }}</h1>
-<section>
-  <button id="createReport" class="btn btn-primary">
-    CREATE A NUISANCE REPORT
-  </button>
+<section class="container">
   <app-crime-list></app-crime-list>
 </section>
