--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="app-container">
-  <app-header></app-header>
-  <app-map></app-map>
+  <div class="app-header">
+    <app-header></app-header>
+  </div>
+  <div class="app-map">
+    <app-map></app-map>
+  </div>
 </div>
