--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,2 @@
 <h1>{{ title }}</h1>
-<section class="container">
-  <app-crime-list></app-crime-list>
-</section>
+<div class="list-container"><app-crime-list></app-crime-list></div>
