Implement get, add, delete services to interact directly with server storage

--- a/src/app/components/crime-list/crime-list.component.html
+++ b/src/app/components/crime-list/crime-list.component.html
@@ -10,6 +10,11 @@
     </tr>
   </thead>
   <tbody>
-    <tr app-crime *ngFor="let crime of crimes" [crime]="crime"></tr>
+    <tr
+      app-crime
+      *ngFor="let crime of crimes"
+      [crime]="crime"
+      (onDeleteCrime)="deleteCrime(crime)"
+    ></tr>
   </tbody>
 </table>
