Implement sorts, delete using valid password

--- a/src/app/components/crime-list/crime-list.component.html
+++ b/src/app/components/crime-list/crime-list.component.html
@@ -1,10 +1,10 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Location</th>
-      <th>Crime</th>
-      <th>Time Reported</th>
-      <th>Status</th>
+      <th class="location" (click)="sortLocation()">Location</th>
+      <th class="name" (click)="sortName()">Crime</th>
+      <th class="time" (click)="sortTime()">Time Reported</th>
+      <th class="status" (click)="sortStatus()">Status</th>
       <th class="extra"></th>
       <th class="extra"></th>
     </tr>
