--- a/src/app/components/crime-list/crime-list.component.css
+++ b/src/app/components/crime-list/crime-list.component.css
@@ -9,3 +9,10 @@ thead th {
 .table thead th {
   border-top: 1px solid #202020; /* Adjust the color and thickness as needed */
 }
+
+th.location:hover,
+th.name:hover,
+th.time:hover,
+th.status:hover {
+  cursor: pointer;
+}
