--- a/src/app/components/crime-list/crime-list.component.css
+++ b/src/app/components/crime-list/crime-list.component.css
@@ -1,3 +1,6 @@
+p {
+  font-family: Arial, sans-serif;
+}
 table {
   border-collapse: collapse;
   font-family: Arial, sans-serif;
@@ -15,4 +18,32 @@ th.name:hover,
 th.time:hover,
 th.status:hover {
   cursor: pointer;
+}
+
+.case-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+p {
+  font-weight: bold;
+}
+
+.left-info {
+  margin-right: auto;
+  margin-left: 7px;
+}
+
+.right-info {
+  margin-left: auto;
+  margin-right: 7px;
+}
+
+.searchBar {
+  margin-left: 8px;
+}
+
+.search {
+  width: 50%;
+  max-width: 70%;
 }
