--- a/src/app/components/crime-add-form/crime-add-form.component.html
+++ b/src/app/components/crime-add-form/crime-add-form.component.html
@@ -89,7 +89,6 @@
     </div>
 
     <div>
-      <button class="cancelBtn btn btn-outline-danger">Cancel</button>
       <input
         class="submitBtn btn btn-primary"
         type="submit"
@@ -99,3 +98,6 @@
     </div>
   </fieldset>
 </form>
+<button id="back" class="btn btn-outline-dark" routerLink="" title="GO BACK">
+  <i class="bi bi-arrow-left"></i>
+</button>
