--- a/src/app/components/crime-list/crime-list.component.html
+++ b/src/app/components/crime-list/crime-list.component.html
@@ -30,4 +30,4 @@
   </tbody>
 </table>
 
-<app-crime-add-form (onAddCrime)="addCrime($event)"></app-crime-add-form>
+<!-- <app-crime-add-form (onAddCrime)="addCrime($event)"></app-crime-add-form> -->
