--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,4 @@
 <h1>{{ title }}</h1>
-<div class="list-container"><app-crime-list></app-crime-list></div>
+<div class="list-container">
+  <router-outlet></router-outlet>
+</div>
