Succeed adding a new form from form route to the server

--- a/src/app/components/crime-add-form/crime-add-form.component.html
+++ b/src/app/components/crime-add-form/crime-add-form.component.html
@@ -98,6 +98,4 @@
     </div>
   </fieldset>
 </form>
-<button id="back" class="btn btn-outline-dark" routerLink="" title="GO BACK">
-  <i class="bi bi-arrow-left"></i>
-</button>
+<button id="back" class="btn btn-outline-danger" routerLink="">< Back</button>
