Implement map onClick function, succeed retrieving lat and lng for add form

--- a/src/app/components/crime-add-form/crime-add-form.component.html
+++ b/src/app/components/crime-add-form/crime-add-form.component.html
@@ -38,6 +38,12 @@
           name="newLocationInput"
           [(ngModel)]="newLocation"
         />
+        <p *ngIf="clickedCoordinates?.lng">
+          Longitude: {{ clickedCoordinates?.lng }}
+        </p>
+        <p *ngIf="clickedCoordinates?.lat">
+          Latitude: {{ clickedCoordinates?.lat }}
+        </p>
       </div>
       <div
         *ngIf="
