Implements update and remove markers function. Markers only shown when its supposed to be shown.

--- a/src/app/components/crime-add-form/crime-add-form.component.html
+++ b/src/app/components/crime-add-form/crime-add-form.component.html
@@ -38,6 +38,7 @@
           name="newLocationInput"
           [(ngModel)]="newLocation"
         />
+        <p>*Please specify the location using the map</p>
         <p *ngIf="clickedCoordinates?.lng">
           Longitude: {{ clickedCoordinates?.lng }}
         </p>
