Implement show nuisance info, changing status from the dialog. Done 1.0

--- a/src/app/components/crime-list/crime-list.component.html
+++ b/src/app/components/crime-list/crime-list.component.html
@@ -26,6 +26,7 @@
       *ngFor="let crime of crimes | search : query"
       [crime]="crime"
       (onDeleteCrime)="deleteCrime(crime)"
+      (onMoreCrime)="showMoreInfo(crime)"
     ></tr>
   </tbody>
 </table>
